--- a/programs/reward_dist/Cargo.toml
+++ b/programs/reward_dist/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "minter"
+name = "reward_dist"
 version = "0.1.0"
 description = "Created with Anchor"
 edition = "2021"
 
 [lib]
 crate-type = ["cdylib", "lib"]
-name = "minter"
+name = "reward_dist"
 
 [features]
 no-entrypoint = []
