--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dependencies": {
         "@coral-xyz/anchor": "^0.28.0",
         "@solana/spl-token": "^0.4.6",
-        "@solana/web3.js": "^1.92.3"
+        "@solana/web3.js": "^1.92.3",
+        "bignumber.js": "^9.1.2"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
