--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 members = [
     "programs/minter",
     "programs/reward_dist",
-    "programs/emission_dist"
+    "programs/emission_dist",
+    "programs/staking",
 ]
 
 [profile.release]
