--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
         "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
     },
     "dependencies": {
-        "@coral-xyz/anchor": "^0.28.0"
+        "@coral-xyz/anchor": "^0.28.0",
+        "@project-serum/anchor": "^0.26.0",
+        "@solana/spl-token": "^0.4.6",
+        "@solana/web3.js": "^1.92.3"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
