--- a/Anchor.toml
+++ b/Anchor.toml
@@ -1,8 +1,8 @@
 [features]
 seeds = false
 skip-lint = false
-[programs.localnet]
-minter = "6cu3q3HcEYc4ZhQe2hQw3rsRZXkebEyw4ZebzNHYzQWG"
+[programs.devnet]
+minter = "HK4orxLDibiGU9VKG5typAbwxbhuiq3hQDSdiEKrmWSv"
 reward_dist = "ADrM2jnS2kFVfQYqjGmnXU9bZom89eKZKpJBf4FjDgi2"
 emission_dist = "ADrM2jnS2kFVfQYqjGmnXU9bZom89eKZKpJBf4FjDgi3"
 
@@ -11,8 +11,11 @@ emission_dist = "ADrM2jnS2kFVfQYqjGmnXU9bZom89eKZKpJBf4FjDgi3"
 url = "https://api.apr.dev"
 
 [provider]
-cluster = "Localnet"
-wallet = "/home/mouazzama/.config/solana/id.json"
+cluster = "devnet"
+wallet = "/home/mouazzama/new_program-keypair.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[test]
+upgradeable = true
