--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     },
     "dependencies": {
         "@coral-xyz/anchor": "^0.28.0",
+        "@project-serum/anchor": "^0.26.0",
         "@solana/spl-token": "^0.4.6",
         "@solana/web3.js": "^1.92.3",
-        "bignumber.js": "^9.1.2"
+        "bignumber.js": "^9.1.2",
+        "web3": "^4.10.0"
     },
     "devDependencies": {
         "@types/bn.js": "^5.1.0",
