--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,6 @@
 [workspace]
 members = [
-    "programs/minter",
-    "programs/reward_dist",
-    "programs/emission_dist",
-    "programs/staking",
+    "programs/staking"
 ]
 
 [profile.release]
