--- a/programs/staking/Cargo.toml
+++ b/programs/staking/Cargo.toml
@@ -19,3 +19,4 @@ default = []
 anchor-lang = "0.28.0"
 ahash = "=0.8.6"
 anchor-spl = "0.28.0" 
+merkle_proof = {path = "../merkle_proof", features = ["cpi"]}
