--- a/programs/merkle_rewards/Cargo.toml
+++ b/programs/merkle_rewards/Cargo.toml
@@ -17,7 +17,11 @@ default = []
 
 [dependencies]
 anchor-lang = "0.28.0"
-ahash = "=0.8.6"
-anchor-spl = "0.28.0" 
-sha2 = "0.9.8"
+ahash = "=0.8.4"
+anchor-spl = "0.28.0"
+spl-token-2022 = "0.6.0"
+# Downgrade solana-program to a compatible version
+solana-program = "1.16.27"
+solana-zk-token-sdk = "1.14.12"
+sha2 = "0.10.8"
 
